# opencvdemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jing/opencvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/jing/opencvdemo/: DetectionBasedTracker.java  FdActivity.java  JavaJni.java  MainActivity.java  NativeActivity.java
app/src/test/java/com/jing/opencvdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
